fix: Aristas se grafican bien
Se actualiza el id de edge de tal forma que sea único. Pues, anteriormente no se contemplaba el caso en que dos aritas tuvieran el mismo origen y mismo destino, esto ocasionaba
que ambas aristas tuvieran el mismo id por lo que solo una de estas aristas era graficada. Además, se vuelve a incluir el dagre para que no haya sobreposicion de aristas.

--- a/Compiladores/AlgoritmoArbolSintactico/index.html
+++ b/Compiladores/AlgoritmoArbolSintactico/index.html
@@ -24,6 +24,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://unpkg.com/dagre@0.7.4/dist/dagre.js"/></script>
+    <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.5.0/cytoscape-dagre.js"></script>
   </head>
   <body>
     <h1 class="title">Algoritmo de árbol sintáctico</h1>
