--- a/Compiladores/AlgoritmoArbolSintactico/index.html
+++ b/Compiladores/AlgoritmoArbolSintactico/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <title>HIPERMEGAGRAFICADOR DE AUTOMATAS 3013</title>
     <meta
@@ -24,30 +30,35 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="https://unpkg.com/dagre@0.7.4/dist/dagre.js"/></script>
+    <script src="https://unpkg.com/dagre@0.7.4/dist/dagre.js"></script>
     <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-dagre/1.5.0/cytoscape-dagre.js"></script>
   </head>
   <body>
-    <h1 class="title">Algoritmo de árbol sintáctico</h1>
+    <h1 class="title">Algoritmo del árbol sintáctico</h1>
 
-    <div class="form-container">
-      <p>Ingrese los campos siguientes:</p>
-      <form id="form" action="#">
-        <div class="field">
-          <label for="alphabet-field">Alfabeto:</label>
-          <input id="alphabet-field" placeholder="a, b" />
-        </div>
+    <div class="container">
+      <div class="form-container">
+        <p>Ingrese los campos siguientes:</p>
+        <form id="form" action="#">
+          <div class="field">
+            <label for="alphabet-field">Alfabeto:</label>
+            <input id="alphabet-field" placeholder="a, b" />
+          </div>
 
-        <div class="field">
-          <label for="regex-field">Expresión regular:</label>
-          <input id="regex-field" placeholder="a(a|b)*bb" />
-        </div>
+          <div class="field">
+            <label for="regex-field">Expresión regular:</label>
+            <input id="regex-field" placeholder="a(a|b)*bb" />
+          </div>
 
-        <input id="continue-button" type="submit" value="Seguir" />
-      </form>
+          <div id="positions"></div>
+
+          <input id="continue-button" type="submit" value="Seguir" />
+        </form>
+        <p class="pasoapaso">Paso a paso:</p>
+        <textarea id="pasoapaso" cols="30" rows="10"></textarea>
+      </div>
+      <div id="cy"></div>
     </div>
-
-    <div id="cy"></div>
 
     <script src="index.js" type="module"></script>
   </body>
